# KnowledgeMCP

./: .gitignore  CHANGELOG.md  COMPLETION_SUMMARY.md  IMPLEMENTATION_PROGRESS.md  LICENSE  README.md  config.yaml  config.yaml.extended  config.yaml.template  pyproject.toml  pytest.ini  quickstart.sh  requirements.txt  server.sh
.github/: copilot-instructions.md
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
docs/: CONFIGURATION.md  SERVER_MANAGEMENT.md
specs/001-mcp-knowledge-server/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-mcp-knowledge-server/checklists/: requirements.md
specs/001-mcp-knowledge-server/contracts/: mcp-tools.md
specs/002-smart-ocr/: SPEC.md
specs/002-smart-ocr/checklists/: requirements.md
specs/003-smart-ocr/: SPEC.md  plan.md
specs/003-smart-ocr/checklists/: requirements.md
specs/004-multi-context-support/: SPEC.md  plan.md  tasks.md
specs/004-multi-context-support/checklists/: requirements.md
src/config/: default_config.yaml  settings.py
src/mcp/: http_server.py  server.py  tools.py
src/models/: context.py  document.py  embedding.py  knowledge_base.py  search_result.py
src/processors/: base.py  docx_processor.py  html_processor.py  image_processor.py  pdf_processor.py  pptx_processor.py  xlsx_processor.py
src/services/: context_service.py  embedding_service.py  knowledge_service.py  ocr_service.py  text_extractor.py  vector_store.py
src/utils/: chunking.py  logging_config.py  validation.py
tests/: e2e_demo.py
tests/integration/: test_knowledge_workflows.py
tests/unit/test_models/: test_document.py
